k8_amazon_order/amazon-cloud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amazon-api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: amazon-api-gateway
  template:
    metadata:
      labels:
        app: amazon-api-gateway
    spec:
      containers:
      - name: amazon-api-gateway
        image: sachetwasti61/amazon-api-gateway
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: amazon-gateway-srv
spec:
  type: LoadBalancer
  selector:
    app: amazon-api-gateway
  ports:
  - name: amazon-api-gateway
    protocol: TCP
    port: 8081
    targetPort: 8081
